#347 refactor: StockDividend 생성자의 빌더 제거